--- a/backend/static/css/scss/_skills_habilidades_tech.scss
+++ b/backend/static/css/scss/_skills_habilidades_tech.scss
@@ -126,7 +126,7 @@
 
 @media (max-width: 575.98px) {
     #skills .skills-surface h2 {
-        font-size: 2rem;
+        // font-size: 2rem;
     }
 
     #skills .skills-surface .lead {
