--- a/backend/static/css/scss/_projects_section.scss
+++ b/backend/static/css/scss/_projects_section.scss
@@ -21,10 +21,9 @@
     /* Cabecera */
     // TODO: refactorizar
     .projects-title {
-    font-size: 2.6rem;
-    font-weight: 800;
-    letter-spacing: -0.03em;
-    color: #0f172a;
+      font-weight: 800;
+      letter-spacing: -0.03em;
+      color: #0f172a;
     }
 
     .projects-subtitle {
@@ -222,7 +221,7 @@
   }
 
   .projects-title {
-    font-size: 1.7rem;
+    // font-size: 1.7rem;
   }
 
   .projects-subtitle {
