--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -30,7 +30,7 @@
             content="Ayudo a equipos y empresas a integrar Zoho CRM, WhatsApp (WOZTELL) y APIs en soluciones web escalables con FastAPI, Angular/React y Docker.">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://jdiaz.tipsterbyte.com/">
-        <meta property="og:image" content="{% static 'images/og-social-share.jpg' %}">
+        <meta property="og:image" content="https://jdiaz.tipsterbyte.com{% static 'images/og-social-share.jpg' %}">
         <meta property="og:locale" content="es_CO">
 
         <!-- TWITTER CARDS (X) -->
@@ -39,7 +39,7 @@
             content="Jaime Díaz | Full-Stack JS/Python · Integraciones de negocio">
         <meta name="twitter:description"
             content="Desarrollador Full-Stack especializado en Zoho CRM (Deluge), WOZTELL, FastAPI, Angular/React, Nginx y Docker.">
-        <meta name="twitter:image" content="{% static 'images/jd-imagen-office.png' %}">
+        <meta name="twitter:image" content="https://jdiaz.tipsterbyte.com{% static 'images/og-social-share.jpg' %}">
 
 
         <!-- ICO  -->
