austes intro.js

--- a/backend/static/css/scss/_responsive_elements.scss
+++ b/backend/static/css/scss/_responsive_elements.scss
@@ -32,6 +32,10 @@
     }
 }
 
+.introjs-tooltip {
+    padding: 0.7rem 1.5rem;
+}
+
 /* Mobile First Media Queries (min-width) */
 @media (min-width: 320px) {
     // Estilos para dispositivos muy pequeños (teléfonos pequeños)
