--- a/backend/static/css/scss/_videos_slide_container.scss
+++ b/backend/static/css/scss/_videos_slide_container.scss
@@ -1,6 +1,6 @@
 
 .jd-skills-number-container {
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 
@@ -123,7 +123,22 @@
   }
 
   .skill-metrics.metrics-content {
-    padding: 1.25rem 1rem;
+    padding: 1rem 0;
+    .skill-metrics.metrics-content {
+      padding: 1rem 0;
+    }
+    .metric-block {
+      i {
+        font-size: 1.5rem;
+      }
+      div {
+        font-size: 1.5rem;
+      }
+      small {
+        line-height: 1rem;
+        font-size: 0.85rem;
+      }
+    }
   }
 
   .skill-metrics .col-6 {
